--- a/lab4/DataContainer/DataContainer/DataContainer.vcxproj
+++ b/lab4/DataContainer/DataContainer/DataContainer.vcxproj
@@ -128,6 +128,7 @@
     <ClInclude Include="Field.h" />
     <ClInclude Include="Grid.h" />
     <ClInclude Include="Solution.h" />
+    <ClInclude Include="StreamlineRenderer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AnalyFunc.cpp" />
@@ -135,6 +136,7 @@
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Solution.cpp" />
+    <ClCompile Include="StreamlineRenderer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
